# AgenticMultimodalRAG

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  test_hf_download.py
.cursor/rules/: rag-rule.mdc
.devcontainer/: Dockerfile  README.md  SETUP.md  devcontainer-alternative.json  devcontainer.json  docker-compose.yml  post-create.sh
.github/workflows/: ci-cd.yml
app/: ai_services.py  download.py  edge_graph_config.py  file_hash_manager.py  file_hashes.json  main.py
app/agentic/: agent_executor.py  llm.py  models.py  query_decomposer.py  response_synthesizer.py
app/api/: __init__.py  agentic.py
config/: edge_graph.yaml  test_edge_graph_hot_reload.yaml
docs/: API.md  Deployment-Guide.md  Design.md  Kubernetes-Environment-Configuration.md  README.md  ROADMAP.md  Rancher-Deployment-Guide.md  Setup.md  Usage.md
docs/feature/agentic-multimodal-graphrag/: README.md  architecture.md  future-graphrag-phase.md  implementation_plan.md  phase2_tracker.md  technical_design.md  usage.md  video-future-phase.md
docs/feature/agentic_rag/: design.md  implementation_plan.md  plan_schema.md  tracker.md  usage.md
docs/feature/edge-graph/: api_design.md  implementation_plan.md  technical_design.md  technical_mapping.md  tracker.md  usage.md
k8s/: DEPLOYMENT.md  DEPLOYMENT_STATUS.md  README.md  configmap.yaml  deploy.sh  deployment.yaml  env-reference.md  ingress.yaml  kong-ingress.yaml  namespace.yaml  pvc.yaml  rbac.yaml  secret.yaml  service.yaml
samples/: sample.docx
scripts/: build-and-push.sh  deploy-rancher.sh  deploy.sh  download.py  setup-k8s-env.py  test_mcp_integration.py
tests/integratione2e/: test_ingest.py
tests/integratione2e/agentic/: test_agent_executor_api.py  test_decompose_api.py
tests/unit/: test_edge_graph_config.py  test_main.py
tests/unit/agentic/: test_agent_executor.py  test_query_decomposer.py  test_response_synthesizer.py
