[project]
name = "rag"
version = "0.1.0"
description = ""
authors = [
    {name = "Salil Kadam",email = "Salil.Kadam@Gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pymilvus>=2.4.4,<3.0.0",
    "uvicorn (==0.23.1)",
    "fastapi>=0.115.12,<0.116.0",
    "python-dotenv",
    "minio>=7.1.16,<8.0.0",
    "asyncpg>=0.29.0,<1.0.0",
    "neo4j>=5.19.0,<6.0.0",
    "python-multipart (>=0.0.20,<0.0.21)",
    "jina (>=3.34.0,<4.0.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "pymupdf (>=1.26.0,<2.0.0)",
    "llvmlite (>=0.44.0,<0.45.0)",
    "numba (>=0.61.2,<0.62.0)",
    "openai-whisper (>=20240930,<20240931)",
    "pillow (>=11.2.1,<12.0.0)",
    "watchdog (>=6.0.0,<7.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "tenacity (>=9.1.2,<10.0.0)",
    "transformers (>=4.52.4,<5.0.0)",
    "pypdf2 (>=3.0.1,<4.0.0)"
]

[tool.poetry]
packages = [
    { include = "app" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
httpx = "^0.28.1"
torchvision = "^0.18.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-cov = "^4.1.0"
flake8 = "^6.1.0"
black = "^23.12.0"
mypy = "^1.8.0"
bandit = "^1.7.5"
isort = "^5.13.0"

[tool.black]
line-length = 127
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 127
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", "test_*"]
skips = ["B101", "B601"]
