
[tool.poetry]
name = "rag"
version = "0.1.0"
description = ""
authors = ["Salil Kadam <Salil.Kadam@Gmail.com>"]
readme = "README.md"
packages = [
    { include = "app" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.11"
pymilvus = "^2.4.4"
uvicorn = "0.23.1"
fastapi = "^0.115.12"
python-dotenv = "*"
minio = "^7.1.16"
asyncpg = "^0.29.0"
neo4j = "^5.19.0"
python-multipart = "0.0.20"
pillow = "^11.2.1"
watchdog = "^6.0.0"
pyyaml = "^6.0.2"
tenacity = "^9.1.2"
pypdf2 = "^3.0.1"
httpx = "^0.28.1"
fastapi-mcp = "^0.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-cov = "^4.1.0"
flake8 = "^6.1.0"
black = "^23.12.0"
mypy = "^1.8.0"
bandit = "^1.7.5"
isort = "^5.13.0"

[tool.black]
line-length = 127
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 127
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
explicit_package_bases = true
namespace_packages = true

[tool.bandit]
exclude_dirs = ["tests", "test_*"]
skips = ["B101", "B601"]

[tool.flake8]
max-line-length = 127
max-complexity = 10
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    ".eggs",
    "*.egg",
    "build",
    "dist",
    ".tox",
    ".mypy_cache",
    ".pytest_cache",
    "site-packages",
    "sympy"
]
ignore = [
    "E203",  # whitespace before ':'
    "W503",  # line break before binary operator
    "F401",  # imported but unused (sometimes needed for type hints)
]
per-file-ignores = [
    "__init__.py:F401",
    "tests/*:F401,F811",
]
